fixes spacing in mobile views

--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -187,7 +187,7 @@
       display: flex;
       align-items: center;
       gap: 15px;
-      margin-right: 5px;
+      margin-right: 10px;
       margin-left: 5px;
     }
   
